--- a/package.json
+++ b/package.json
@@ -14,9 +14,18 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "handlebars": "^4.7.8",
+    "jsonwebtoken": "^9.0.2",
+    "jwtoken": "^0.0.0",
     "mongoose": "^8.1.1",
-    "nodemon": "^3.0.3"
+    "nodemailer": "^6.9.9",
+    "nodemailer-express-handlebars": "^6.1.2",
+    "nodemailer-sendgrid": "^1.0.3",
+    "nodemon": "^3.0.3",
+    "path": "^0.12.7"
   }
 }
