--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "auth-node-mongo",
   "version": "1.0.0",
-  "description": "",
+  "description": "O projeto auth-node-mongo é uma aplicação Node.js para autenticação de usuários utilizando MongoDB como banco de dados",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Natan Oliveira",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
